--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,15 @@
         <title>TypeScript 2 Course</title>
     </head>
     <body>
-        <h1>This is a test</h1>
+        <h1>Bienvenido</h1>
 
-        <script src="./app/basic/car.js"></script>
+       <!-- <input id="num1">
+        +
+        <input id="num2">
+        <button id="sum"> suma </button> 
+        =
+        <span id="result"> </span>-->
+
+        <script src="./app/extension/extension.js"></script>
     </body>
 </html>
